--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,7 +1,8 @@
 .container {
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 20px;
-    background-color: rgb(202, 197, 197);
+    background: #f5f5f5;
 }
 
 .productsGrid {
