--- a/src/componentes/ProductCard.module.css
+++ b/src/componentes/ProductCard.module.css
@@ -1,9 +1,8 @@
 .card{
-    background-color: #f0f0f0;
+    background: white;
     border-radius: 8px;
-    padding: 6px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    transition: transform 0.2s;
+    padding: 20px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .card:hover {
@@ -21,31 +20,28 @@
 }
 
 .productTitle {
-    font-size: 10px;
+    font-size: 18px;
     font-weight: bold;
-    margin: 0 0 5px;
+    margin: 10px;
 }
 
 .productPrice {
-    font-size: 12px;
-    color: #333;
-    font-weight: 800;
+    font-size: 24px;
+    color: #e74c3c;
+    font-weight: bold;
     margin-bottom: 10px;
 }
 
 .productDescription {
-    font-size: 10px;
     color: #666;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+    line-height: 1.4;
 }
 
 .productRating {
-    font-size: 10px;
-    color: #ff9800;
-    display: flex;
-    align-items: center;
+    margin-bottom: 15px;
 }
 
 .stars {
-    color: #f3d428;
+    color: #ffc107;
 }
